Android UI dark mode added and removed unused imports Reference: https://medium.com/swlh/androids-dark-mode-through-user-configurations-4df9d75b0db0

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,13 +8,13 @@
     <fragment
         android:id="@+id/currentWeatherFragment"
         android:name="com.example.forecastify.ui.weather.current.CurrentWeatherFragment"
-        android:label="current_weather_fragment"
+        android:label="Current Weather"
         tools:layout="@layout/current_weather_fragment" />
     <fragment
         android:id="@+id/futureDetailWeatherFragment"
         android:name="com.example.forecastify.ui.weather.future.detail.FutureDetailWeatherFragment"
-        android:label="future_detail_weather_fragment"
-        tools:layout="@layout/future_detail_weather_fragment" >
+        android:label="Future Detail"
+        tools:layout="@layout/future_detail_weather_fragment">
         <argument
             android:name="dateString"
             app:argType="string" />
@@ -22,8 +22,8 @@
     <fragment
         android:id="@+id/futureListWeatherFragment"
         android:name="com.example.forecastify.ui.weather.future.list.FutureListWeatherFragment"
-        android:label="future_list_weather_fragment"
-        tools:layout="@layout/future_list_weather_fragment" >
+        android:label="Future weathers"
+        tools:layout="@layout/future_list_weather_fragment">
         <action
             android:id="@+id/actionDetail"
             app:destination="@id/futureDetailWeatherFragment" />
@@ -31,5 +31,5 @@
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.example.forecastify.ui.settings.SettingsFragment"
-        android:label="SettingsFragment" />
+        android:label="@string/settings" />
 </navigation>
