--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-<!-- TODO remove darkactionbar and add noactionbar-->
+<!--remove darkactionbar and add noactionbar-->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
